# subject

./: .gitignore  .gitreview  .testr.conf  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.rst  requirements.txt  setup.cfg  tox.ini
doc/source/: architecture.rst  artifact-types.rst  authentication.rst  cache.rst  common-image-properties.rst  conf.py  configuring.rst  controllingservers.rst  database_architecture.rst  db.rst  deprecation-note.inc  domain_implementation.rst  flows.rst  formats.rst  glanceapi.rst  glanceclient.rst  glancemetadefcatalogapi.rst  identifiers.rst  image-location-strategy-modules.rst  index.rst  installing.rst  metadefs-concepts.rst  notifications.rst  policies.rst  property-protections.rst  requirements.rst  sample-configuration.rst  signature.rst  statuses.rst  tasks.rst
etc/: glance-api-paste.ini  glance-api.conf  glance-cache.conf  glance-glare-paste.ini  glance-glare.conf  glance-registry.conf  glance-scrubber.conf  glance-swift.conf.sample  policy.json  property-protections-policies.conf.sample  property-protections-roles.conf.sample  schema-image.json  subject-api-paste.ini  subject-api.conf  subject-registry-paste.ini  subject-registry.conf
etc/metadefs/: cim-processor-allocation-setting-data.json  cim-resource-allocation-setting-data.json  compute-cpu-pinning.json  compute-guest-memory-backing.json  compute-guest-shutdown.json  compute-hypervisor.json  compute-instance-data.json  compute-libvirt-image.json  compute-libvirt.json  compute-randomgen.json  compute-vcputopology.json  compute-vmware-flavor.json  compute-vmware.json  compute-watchdog.json  compute-xenapi.json  glance-common-image-props.json  image-signature-verification.json  operating-system.json  software-databases.json  software-runtimes.json  software-webservers.json  storage-volume-type.json
etc/oslo-config-generator/: glance-api.conf  glance-cache.conf  glance-glare.conf  glance-manage.conf  glance-registry.conf  glance-scrubber.conf
glance.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
rally-jobs/: README.rst  glance.yaml
rally-jobs/plugins/: plugin_sample.py
releasenotes/notes/: Prevent-removing-last-image-location-d5ee3e00efe14f34.yaml  add-cpu-thread-pinning-metadata-09b1866b875c4647.yaml  add-processlimits-to-qemu-img-c215f5d90f741d8a.yaml  bug-1537903-54b2822eac6cfc09.yaml  bump-api-2-4-efa266aef0928e04.yaml  consistent-store-names-57374b9505d530d0.yaml  deprecate-glance-api-opts-23bdbd1ad7625999.yaml  deprecate-show-multiple-location-9890a1e961def2f6.yaml  deprecate-v1-api-6c7dbefb90fd8772.yaml  improved-config-options-221c58a8c37602ba.yaml  location-add-status-checks-b70db66100bc96b7.yaml  make-task-api-admin-only-by-default-7def996262e18f7a.yaml  new_image_filters-c888361e6ecf495c.yaml  newton-1-release-065334d464f78fc5.yaml  (+6 more)
subject/: context.py  gateway.py  i18n.py  location.py  notifier.py  opts.py  schema.py  scrubber.py  version.py
(+338 files in other folders)
